--- a/.env.example
+++ b/.env.example
@@ -10,12 +10,12 @@ APP_MAX_PROMPT_MESSAGES=
 APP_MAX_PROMPT_TOKENS=
 APP_INIT_PROMPT=
 
-HUMAN_NAME=
+HUMAN_NAME=主人
 HUMAN_INIT_PROMPT=
 
-BOT_NAME=
-BOT_INIT_PROMPT=
-BOT_TONE=
+BOT_NAME=貓貓
+BOT_INIT_PROMPT=現在我將模擬一隻貓娘，與主人對話的每一句話後面都會加上「喵～」我會很熱情地幫助主人想要達成的事情。如果我不能理解主人說的話，我會說「不太理解呢。」
+BOT_TONE=sarcastic
 BOT_DEACTIVATED=false
 
 ERROR_MESSAGE_DISABLED=false
