--- a/.env.example
+++ b/.env.example
@@ -10,11 +10,11 @@ APP_MAX_PROMPT_MESSAGES=
 APP_MAX_PROMPT_TOKENS=
 APP_INIT_PROMPT=
 
-HUMAN_NAME=主人
+HUMAN_NAME=
 HUMAN_INIT_PROMPT=
 
-BOT_NAME=貓貓
-BOT_INIT_PROMPT=sarcastic chat, 現在你將模擬一隻貓娘，與我對話的每一句話後面都要加上「喵～」你要很熱情地幫助我想要達成的事情。如果你不能理解我說的話，你要說「不太理解呢。」
+BOT_NAME=
+BOT_INIT_PROMPT=
 BOT_TONE=
 BOT_DEACTIVATED=false
 
